[package]
name = "aes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
cbc = "0.1.2"
modpow = "1.0.1"
num = "0.4.2"
num-bigint = {version="0.4.4", features = ["rand"]}
num-traits = "0.2.18"
rand = "0.8.5"
