[package]
name = "aes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
cbc = "0.1.2"
modpow = "1.0.1"
num = "0.4.2"
num-bigint = { version = "0.8.4", features = ["i128", "prime", "zeroize"], default-features = false, package = "num-bigint-dig" }
num-traits = "0.2.18"
pem = "3.0.4"
rand = "0.8.5"
rsa = "0.9.6"
num-integer = "0.1"
image = "0.25.1"
